Increase width of the URL field in the settings.

--- a/src/settings.html
+++ b/src/settings.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Settings</h1>
   <p>URL:
-    <input type="text" id="url">
+    <input type="text" id="url" style="width: 90%">
   </p>
   <input type="button" value="OK" onclick="saveSettings()">
   <input type="button" value="Cancel" onclick="goBack()">
